# dynamic-random-sampler

./: .capabilities.json  .gitignore  .template-version  CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml
.beads/: issues.jsonl  sync_base.jsonl
.claude/: settings.json
.claude/commands/: autonomous-mode.md  checkpoint.md  ideate.md  project-setup.md  quality-check.md  scope.md  self-review.md  upstream-template.md
.claude/scripts/: autonomous-stop-hook.py  quality-check.sh  run-py.sh  startup-hook.py
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  initialize.sh  post-create.sh
.github/workflows/: build-wheels.yml  release.yml  test.yml
benches/: sampling.rs
examples/: profile_sampling.rs
python/dynamic_random_sampler/: __init__.py
scripts/: check_coverage.py  extra_lints.py  release.py
src/: lib.rs
src/core/: config.rs  debug.rs  level.rs  mod.rs  range.rs  sampler.rs  stats.rs  tree.rs  update.rs
src/dynamic_random_sampler/: __init__.py
tests/: test_hypothesis.py  test_list_conformance.py  test_list_operations.py  test_placeholder.py  test_rng_seeding.py  test_statistics.py  test_weighted_dict.py  test_weighted_dict_conformance.py  test_weighted_dict_sampling.py
