[package]
name = "dynamic_random_sampler"
version = "0.1.0"
edition = "2021"
description = "Dynamic weighted random sampling with O(log* N) operations"
license = "MIT"

[lib]
name = "dynamic_random_sampler"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
rand = "0.8"

[features]
default = ["python"]
# Python bindings feature
python = ["dep:pyo3"]
# extension-module is needed for building the Python module
extension-module = ["python", "pyo3/extension-module"]

[dev-dependencies]
rand_chacha = "0.3"
approx = "0.5"

[profile.release]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
